# evaluation-engine

./: README.md  skills-lock.json
.github/workflows/: rust.yml
src/nautilus-server/: Cargo.toml
src/nautilus-server/src/: app.rs  asset.rs  endpoints.rs  job.rs  lib.rs  main.rs  oracle.rs
src/nautilus-server/src/apps/btc-price-guess/: allowed_endpoints.yaml  mod.rs
src/nautilus-server/src/apps/evaluation/: allowed_endpoints.yaml
src/nautilus-server/src/apps/finance/: allowed_endpoints.yaml  mod.rs  portfolio.rs  roi.rs  score.rs
src/nautilus-server/src/apps/movement-percentage-guess/: mod.rs
src/nautilus-server/src/apps/polymarket/: allowed_endpoints.yaml  client.rs  mod.rs  score.rs
src/nautilus-server/src/apps/portfolio-roi/: allowed_endpoints.yaml  mod.rs
src/nautilus-server/src/apps/prediction/: allowed_endpoints.yaml
src/nautilus-server/src/apps/price-range-guess/: allowed_endpoints.yaml  mod.rs
src/nautilus-server/src/apps/up-down-guess/: mod.rs
src/nautilus-server/src/scoring/: btc_price.rs  mod.rs  movement_pct.rs  price_range.rs  up_down.rs
