[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["price-range-guess"]
# Shared finance machinery (job model, oracle, scoring, asset map, endpoints).
# Each evaluator enables it; exactly one evaluator is built per enclave image.
finance = []
price-range-guess = ["finance"]
up-down-guess = ["finance"]
movement-percentage-guess = ["finance"]
# Competition trading/performance enclave: returns a SIGNED ROI metric (u64), not a u8 score,
# so it uses its own handlers (not the shared scoring/endpoints) while reusing the low-level
# job/asset/oracle modules. Build with: --no-default-features --features portfolio-roi.
portfolio-roi = []
# Polymarket prediction-market enclave: serves the three polymarket-* categories (resolution,
# event, price) with a u8 score via its own handlers + Polymarket client (no Pyth oracle / asset
# map). Build with: --no-default-features --features polymarket.
polymarket = []