[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["finance"]
# FINANCE engine: ONE binary serving every finance-class category — the three u8-score "guess"
# categories (price-range-guess, up-down-guess, movement-percentage-guess) via the shared scoring
# registry + endpoints, AND the u64-metric portfolio-roi via its own pipeline. Compiles the job
# model, Pyth oracle, asset map, scoring, and the portfolio math. The /process_data + /validate
# handlers dispatch by category_id. Build with: --no-default-features --features finance.
finance = []
# PREDICTION engine: the three polymarket-* categories (resolution, event, price) with a u8 score
# via the Polymarket client (no Pyth oracle / asset map). Already dispatches by category_id. Its
# Rust code lives in apps/polymarket/ (gated by this feature). Build: --no-default-features --features prediction.
prediction = []